<resources>
    <string name="app_name">dyapp</string>
    <string name="f_but_text">Open Calculator</string>
    <string name="wel_msg">DY Calculator</string>>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="calc_type">Choose the Type of Calculator</string>

    <string name="f_but1">Simple</string>
    <string name="f_but2">Trigno</string>
    <string name="f_but3">Soon</string>
    <string name="f_but4">Soon</string>


    <string name="but_plus">+</string>
    <string name="but_sub">-</string>
    <string name="but_mul">*</string>
    <string name="but_div">/</string>
    <string name="but_1">1</string>
    <string name="but_2">2</string>
    <string name="but_3">3</string>
    <string name="but_4">4</string>
    <string name="but_5">5</string>
    <string name="but_6">6</string>
    <string name="but_7">7</string>
    <string name="but_8">8</string>
    <string name="but_9">9</string>
    <string name="but_0">0</string>
    <string name="but_deci">.</string>
    <string name="but_del">DEL</string>
    <string name="but_eq">=</string>






</resources>
